<resources>
    <string name="app_name">Memorandum</string>
    <string name="add_memorandum">Add</string>
    <string name="memorandum_name">名称</string>
    <string name="memorandum_info">信息</string>
    <string name="memorandum_name_tip">请输入备忘录名称</string>
    <string name="memorandum_info_tip">请输入备忘录信息</string>
    <string name="save_info">保存</string>
    <string name="change_info">修改</string>
    <string name="delete_info">删除</string>
</resources>
